# UAVChase

./: README.md
UAVChase/: CMakeLists.txt  package.xml
control/: CMakeLists.txt  package.xml
control/src/: rviz_goal_publisher_node.py  score.py  vel_controller_node.py
uav_sim/: CMakeLists.txt  package.xml
uav_sim/launch/: trial1.launch
uav_sim/rviz/: default.rviz
uav_sim/urdf/: component_snippets.xacro  iris_base.xacro  mav_generic_odometry_sensor.gazebo  mav_with_vi_sensor.gazebo
uav_sim/worlds/: trial_1.world
vision/: package.xml
vision/include/: blob_detector.py  range_detector.py
vision/src/: orb_detection_node.py  pcl_node.py
